# legend

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PERFORMANCE.md  PLAN.md  R*.md  README.md  SESSION_GUIDE.md  base_idea.md
.claude/: settings.json
.legend/: state.lz4
src/: main.rs  storage.rs  types.rs
src/commands/: discover.rs  get_state.rs  init.rs  mod.rs  search.rs  show.rs  update.rs
