[package]
name = "legend"
version = "0.1.0"
edition = "2021"
authors = ["Nick Thorpe"]
description = "Lightweight context memory layer for AI-assisted development"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lz4 = "1.24"
serde_json = "1.0"

[dev-dependencies]
# criterion = "0.5"  # Will add for benchmarking in Layer 4-5

# [[bench]]
# name = "performance"
# harness = false
